[package]
name = "slime_os"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = { git = "https://github.com/rust-lang-nursery/lazy-static.rs", version = "1.5.0", features = [
    "spin_no_std",
] }
buddy_system_allocator = "0.9.0"
riscv = { version = "0.10.1" }
bitflags = "2.0.0-rc.1"
spin = { version = "0.9.5" }
linked_list_allocator = "0.10.5"
log = "0.4"
